--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,8 +151,30 @@
   body {
     @apply bg-background text-foreground;
   }
-  
-  .element-hover{
+
+  .element-hover {
     @apply hover:bg-gradient-to-r hover:from-fuchsia-600 hover:to-purple-600 hover:bg-clip-text hover:text-transparent transition-all
   }
+
+}
+
+
+.pic-anim {
+  animation: morph 5s linear infinite;;
+}
+
+
+@keyframes morph {
+  0% {
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  }
+
+  50% {
+    border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+  }
+
+  100% {
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  }
+
 }
